update to show the name in the img replacement

--- a/src/partials/home.ng.html
+++ b/src/partials/home.ng.html
@@ -22,10 +22,10 @@
       </div>    
       <div class="row">
             <div class="large-6 text-center columns">
-              <img src="{{thingA.src || 'http://placehold.it/400x300&text=[img]'}}">
+              <img src="{{thingA.src || 'http://placehold.it/400x300&text='+thingA.name}}">
             </div>
             <div class="large-6 text-center columns">
-              <img src="{{thingB.src || 'http://placehold.it/400x300&text=[img]'}}">
+              <img src="{{thingB.src || 'http://placehold.it/400x300&text='+thingB.name}}">
             </div>
       </div>
       <div class="row">
