remove extra div, center selector

--- a/src/partials/home.ng.html
+++ b/src/partials/home.ng.html
@@ -37,19 +37,14 @@
             </div>
       </div>
       <div class="row">
-      	<div class="large-12 text-center columns">
+      	<div class="large-10 large-centered text-center columns">
             <ul class="button-group">
 					  <li ng-repeat="category in thingRatings"><a ng-click="vote({{category.rating}})" class="button">{{category.name}}</a></li>
 					</ul>
 				</div>
       </div>
-      <div>
-      </div>
+
      
-     
-       
-    
-       
      
       <footer class="row">
         <div class="large-12 columns">
